--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,12 +35,6 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/fund-manager
 endorsed.classpath=
 excludes=
-file.reference.appdriver-agent.jar=D:\\GGC_Java_Systems\\lib\\appdriver-agent.jar
-file.reference.appdriver-agentfx-ui.jar=D:\\GGC_Java_Systems\\lib\\appdriver-agentfx-ui.jar
-file.reference.appdriver-agentfx.jar=D:\\GGC_Java_Systems\\lib\\appdriver-agentfx.jar
-file.reference.appdriver-base.jar=D:\\GGC_Java_Systems\\lib\\appdriver-base.jar
-file.reference.appdriver-constant.jar=D:\\GGC_Java_Systems\\lib\\appdriver-constant.jar
-file.reference.appdriver-iface.jar=D:\\GGC_Java_Systems\\lib\\appdriver-iface.jar
 file.reference.bcprov-jdk16-145.jar=D:\\GGC_Java_Systems\\lib\\bcprov-jdk16-145.jar
 file.reference.commons-codec-1.11.jar=D:\\GGC_Java_Systems\\lib\\commons-codec-1.11.jar
 file.reference.commons-compress-1.9.jar=D:\\GGC_Java_Systems\\lib\\commons-compress-1.9.jar
@@ -53,15 +47,19 @@ file.reference.ini4j-0.5.1.jar=D:\\GGC_Java_Systems\\lib\\ini4j-0.5.1.jar
 file.reference.json-simple-1.1.1.jar=D:\\GGC_Java_Systems\\lib\\json-simple-1.1.1.jar
 file.reference.junit-4.12.jar=D:\\GGC_Java_Systems\\lib\\junit-4.12.jar
 file.reference.mysql-connector-java-5.1.49.jar=D:\\GGC_Java_Systems\\lib\\mysql-connector-java-5.1.49.jar
+file.reference.poi-4.0.1.jar=D:\\GGC_Java_Systems\\lib\\poi-4.0.1.jar
+file.reference.poi-ooxml-4.0.1.jar=D:\\GGC_Java_Systems\\lib\\poi-ooxml-4.0.1.jar
+file.reference.poi-ooxml-schemas-4.0.1.jar=D:\\GGC_Java_Systems\\lib\\poi-ooxml-schemas-4.0.1.jar
+file.reference.xmlbeans-3.0.2.jar=D:\\GGC_Java_Systems\\lib\\xmlbeans-3.0.2.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.appdriver-agent.jar}:\
-    ${file.reference.appdriver-agentfx-ui.jar}:\
-    ${file.reference.appdriver-agentfx.jar}:\
-    ${file.reference.appdriver-base.jar}:\
-    ${file.reference.appdriver-constant.jar}:\
-    ${file.reference.appdriver-iface.jar}:\
+    ${reference.appdriver-agent.jar}:\
+    ${reference.appdriver-agentfx.jar}:\
+    ${reference.appdriver-agentfx-ui.jar}:\
+    ${reference.appdriver-base.jar}:\
+    ${reference.appdriver-constant.jar}:\
+    ${reference.appdriver-iface.jar}:\
     ${file.reference.bcprov-jdk16-145.jar}:\
     ${file.reference.commons-codec-1.11.jar}:\
     ${file.reference.commons-compress-1.9.jar}:\
@@ -73,7 +71,11 @@ javac.classpath=\
     ${file.reference.json-simple-1.1.1.jar}:\
     ${file.reference.mysql-connector-java-5.1.49.jar}:\
     ${file.reference.junit-4.12.jar}:\
-    ${file.reference.hamcrest-core-1.3.jar}
+    ${file.reference.hamcrest-core-1.3.jar}:\
+    ${file.reference.poi-4.0.1.jar}:\
+    ${file.reference.poi-ooxml-4.0.1.jar}:\
+    ${file.reference.poi-ooxml-schemas-4.0.1.jar}:\
+    ${file.reference.xmlbeans-3.0.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -112,6 +114,18 @@ jlink.launcher.name=fund-manager
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
+project.appdriver-agent=../appdriver-agent
+project.appdriver-agentfx=../appdriver-agentfx
+project.appdriver-agentfx-ui=../appdriver-agentfx-ui
+project.appdriver-base=../appdriver-base
+project.appdriver-constant=../appdriver-constant
+project.appdriver-iface=../appdriver-iface
+reference.appdriver-agent.jar=${project.appdriver-agent}/dist/appdriver-agent.jar
+reference.appdriver-agentfx-ui.jar=${project.appdriver-agentfx-ui}/dist/appdriver-agentfx-ui.jar
+reference.appdriver-agentfx.jar=${project.appdriver-agentfx}/dist/appdriver-agentfx.jar
+reference.appdriver-base.jar=${project.appdriver-base}/dist/appdriver-base.jar
+reference.appdriver-constant.jar=${project.appdriver-constant}/dist/appdriver-constant.jar
+reference.appdriver-iface.jar=${project.appdriver-iface}/dist/appdriver-iface.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
