--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -50,7 +50,7 @@ file.reference.commons-logging-1.1.1.jar=..\\lib\\commons-logging-1.1.1.jar
 file.reference.commons-pool2-2.4.2.jar=..\\lib\\commons-pool2-2.4.2.jar
 file.reference.hamcrest-core-1.3.jar=..\\lib\\hamcrest-core-1.3.jar
 file.reference.ini4j-0.5.1.jar=..\\lib\\ini4j-0.5.1.jar
-file.reference.json-simple-1.1.1.jar=..\\lib\\json-simple-1.1.1.jar
+file.reference.json-simple-1.1.1.jar=../lib/json-simple-1.1.1.jar
 file.reference.junit-4.12.jar=..\\lib\\junit-4.12.jar
 file.reference.mysql-connector-java-5.1.49.jar=..\\lib\\mysql-connector-java-5.1.49.jar
 file.reference.poi-4.0.1.jar=..\\lib\\poi-4.0.1.jar
@@ -81,7 +81,8 @@ javac.classpath=\
     ${file.reference.appdriver-agentfx.jar}:\
     ${file.reference.appdriver-base.jar}:\
     ${file.reference.appdriver-constant.jar}:\
-    ${file.reference.appdriver-iface.jar}
+    ${file.reference.appdriver-iface.jar}:\
+    ${file.reference.json-simple-1.1.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
