--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -41,7 +41,7 @@ file.reference.appdriver-agentfx.jar=../lib/appdriver-agentfx.jar
 file.reference.appdriver-base.jar=../lib/appdriver-base.jar
 file.reference.appdriver-constant.jar=../lib/appdriver-constant.jar
 file.reference.appdriver-iface.jar=../lib/appdriver-iface.jar
-file.reference.bcprov-jdk16-145.jar=..\\lib\\bcprov-jdk16-145.jar
+file.reference.bcprov-jdk18on-175.jar=../lib/bcprov-jdk18on-175.jar
 file.reference.commons-codec-1.11.jar=..\\lib\\commons-codec-1.11.jar
 file.reference.commons-compress-1.9.jar=..\\lib\\commons-compress-1.9.jar
 file.reference.commons-dbcp2-2.7.0.jar=..\\lib\\commons-dbcp2-2.7.0.jar
@@ -60,7 +60,6 @@ file.reference.xmlbeans-3.0.2.jar=..\\lib\\xmlbeans-3.0.2.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.bcprov-jdk16-145.jar}:\
     ${file.reference.commons-codec-1.11.jar}:\
     ${file.reference.commons-compress-1.9.jar}:\
     ${file.reference.commons-dbcp2-2.7.0.jar}:\
@@ -82,7 +81,8 @@ javac.classpath=\
     ${file.reference.appdriver-base.jar}:\
     ${file.reference.appdriver-constant.jar}:\
     ${file.reference.appdriver-iface.jar}:\
-    ${file.reference.json-simple-1.1.1.jar}
+    ${file.reference.json-simple-1.1.1.jar}:\
+    ${file.reference.bcprov-jdk18on-175.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
