--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,12 +35,6 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/fund-manager
 endorsed.classpath=
 excludes=
-file.reference.appdriver-agent.jar=C:\\Users\\Maynard\\Documents\\GitHub\\lib\\appdriver-agent.jar
-file.reference.appdriver-agentfx-ui.jar=C:\\Users\\Maynard\\Documents\\GitHub\\lib\\appdriver-agentfx-ui.jar
-file.reference.appdriver-agentfx.jar=C:\\Users\\Maynard\\Documents\\GitHub\\lib\\appdriver-agentfx.jar
-file.reference.appdriver-base.jar=C:\\Users\\Maynard\\Documents\\GitHub\\lib\\appdriver-base.jar
-file.reference.appdriver-constant.jar=C:\\Users\\Maynard\\Documents\\GitHub\\lib\\appdriver-constant.jar
-file.reference.appdriver-iface.jar=C:\\Users\\Maynard\\Documents\\GitHub\\lib\\appdriver-iface.jar
 file.reference.bcprov-jdk18on-175.jar=../lib/bcprov-jdk18on-175.jar
 file.reference.commons-codec-1.11.jar=../lib/commons-codec-1.11.jar
 file.reference.commons-compress-1.9.jar=../lib/commons-compress-1.9.jar
@@ -60,13 +54,13 @@ file.reference.xmlbeans-3.0.2.jar=../lib/xmlbeans-3.0.2.jar
 includes=**
 jar.compress=false
 javac.classpath=\
+    ${reference.appdriver-agent.jar}:\
+    ${reference.appdriver-agentfx.jar}:\
+    ${reference.appdriver-agentfx-ui.jar}:\
+    ${reference.appdriver-base.jar}:\
+    ${reference.appdriver-constant.jar}:\
+    ${reference.appdriver-iface.jar}:\
     ${file.reference.commons-codec-1.11.jar}:\
-    ${file.reference.appdriver-agent.jar}:\
-    ${file.reference.appdriver-agentfx-ui.jar}:\
-    ${file.reference.appdriver-agentfx.jar}:\
-    ${file.reference.appdriver-base.jar}:\
-    ${file.reference.appdriver-constant.jar}:\
-    ${file.reference.appdriver-iface.jar}:\
     ${file.reference.commons-compress-1.9.jar}:\
     ${file.reference.commons-dbcp2-2.7.0.jar}:\
     ${file.reference.commons-lang3-3.3.2.jar}:\
@@ -121,6 +115,18 @@ jlink.launcher.name=fund-manager
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
+project.appdriver-agent=../appdriver-agent
+project.appdriver-agentfx=../appdriver-agentfx
+project.appdriver-agentfx-ui=../appdriver-agentfx-ui
+project.appdriver-base=../appdriver-base
+project.appdriver-constant=../appdriver-constant
+project.appdriver-iface=../appdriver-iface
+reference.appdriver-agent.jar=${project.appdriver-agent}/dist/appdriver-agent.jar
+reference.appdriver-agentfx-ui.jar=${project.appdriver-agentfx-ui}/dist/appdriver-agentfx-ui.jar
+reference.appdriver-agentfx.jar=${project.appdriver-agentfx}/dist/appdriver-agentfx.jar
+reference.appdriver-base.jar=${project.appdriver-base}/dist/appdriver-base.jar
+reference.appdriver-constant.jar=${project.appdriver-constant}/dist/appdriver-constant.jar
+reference.appdriver-iface.jar=${project.appdriver-iface}/dist/appdriver-iface.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
