--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,31 +35,31 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/fund-manager
 endorsed.classpath=
 excludes=
-file.reference.appdriver-agent.jar=../lib/appdriver-agent.jar
-file.reference.appdriver-agentfx-ui.jar=../lib/appdriver-agentfx-ui.jar
-file.reference.appdriver-agentfx.jar=../lib/appdriver-agentfx.jar
-file.reference.appdriver-base.jar=../lib/appdriver-base.jar
-file.reference.appdriver-constant.jar=../lib/appdriver-constant.jar
-file.reference.appdriver-iface.jar=../lib/appdriver-iface.jar
 file.reference.bcprov-jdk18on-175.jar=../lib/bcprov-jdk18on-175.jar
-file.reference.commons-codec-1.11.jar=..\\lib\\commons-codec-1.11.jar
-file.reference.commons-compress-1.9.jar=..\\lib\\commons-compress-1.9.jar
-file.reference.commons-dbcp2-2.7.0.jar=..\\lib\\commons-dbcp2-2.7.0.jar
-file.reference.commons-lang3-3.3.2.jar=..\\lib\\commons-lang3-3.3.2.jar
-file.reference.commons-logging-1.1.1.jar=..\\lib\\commons-logging-1.1.1.jar
-file.reference.commons-pool2-2.4.2.jar=..\\lib\\commons-pool2-2.4.2.jar
-file.reference.hamcrest-core-1.3.jar=..\\lib\\hamcrest-core-1.3.jar
-file.reference.ini4j-0.5.1.jar=..\\lib\\ini4j-0.5.1.jar
+file.reference.commons-codec-1.11.jar=../lib/commons-codec-1.11.jar
+file.reference.commons-compress-1.9.jar=../lib/commons-compress-1.9.jar
+file.reference.commons-dbcp2-2.7.0.jar=../lib/commons-dbcp2-2.7.0.jar
+file.reference.commons-lang3-3.3.2.jar=../lib/commons-lang3-3.3.2.jar
+file.reference.commons-logging-1.1.1.jar=../lib/commons-logging-1.1.1.jar
+file.reference.commons-pool2-2.4.2.jar=../lib/commons-pool2-2.4.2.jar
+file.reference.hamcrest-core-1.3.jar=../lib/hamcrest-core-1.3.jar
+file.reference.ini4j-0.5.1.jar=../lib/ini4j-0.5.1.jar
 file.reference.json-simple-1.1.1.jar=../lib/json-simple-1.1.1.jar
-file.reference.junit-4.12.jar=..\\lib\\junit-4.12.jar
-file.reference.mysql-connector-java-5.1.49.jar=..\\lib\\mysql-connector-java-5.1.49.jar
-file.reference.poi-4.0.1.jar=..\\lib\\poi-4.0.1.jar
-file.reference.poi-ooxml-4.0.1.jar=..\\lib\\poi-ooxml-4.0.1.jar
-file.reference.poi-ooxml-schemas-4.0.1.jar=..\\lib\\poi-ooxml-schemas-4.0.1.jar
-file.reference.xmlbeans-3.0.2.jar=..\\lib\\xmlbeans-3.0.2.jar
+file.reference.junit-4.12.jar=../lib/junit-4.12.jar
+file.reference.mysql-connector-java-5.1.49.jar=../lib/mysql-connector-java-5.1.49.jar
+file.reference.poi-4.0.1.jar=../lib/poi-4.0.1.jar
+file.reference.poi-ooxml-4.0.1.jar=../lib/poi-ooxml-4.0.1.jar
+file.reference.poi-ooxml-schemas-4.0.1.jar=../lib/poi-ooxml-schemas-4.0.1.jar
+file.reference.xmlbeans-3.0.2.jar=../lib/xmlbeans-3.0.2.jar
 includes=**
 jar.compress=false
 javac.classpath=\
+    ${reference.appdriver-agent.jar}:\
+    ${reference.appdriver-agentfx.jar}:\
+    ${reference.appdriver-agentfx-ui.jar}:\
+    ${reference.appdriver-base.jar}:\
+    ${reference.appdriver-constant.jar}:\
+    ${reference.appdriver-iface.jar}:\
     ${file.reference.commons-codec-1.11.jar}:\
     ${file.reference.commons-compress-1.9.jar}:\
     ${file.reference.commons-dbcp2-2.7.0.jar}:\
@@ -75,12 +75,6 @@ javac.classpath=\
     ${file.reference.poi-ooxml-4.0.1.jar}:\
     ${file.reference.poi-ooxml-schemas-4.0.1.jar}:\
     ${file.reference.xmlbeans-3.0.2.jar}:\
-    ${file.reference.appdriver-agent.jar}:\
-    ${file.reference.appdriver-agentfx-ui.jar}:\
-    ${file.reference.appdriver-agentfx.jar}:\
-    ${file.reference.appdriver-base.jar}:\
-    ${file.reference.appdriver-constant.jar}:\
-    ${file.reference.appdriver-iface.jar}:\
     ${file.reference.json-simple-1.1.1.jar}:\
     ${file.reference.bcprov-jdk18on-175.jar}
 # Space-separated list of extra javac options
@@ -121,6 +115,18 @@ jlink.launcher.name=fund-manager
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
+project.appdriver-agent=../appdriver-agent
+project.appdriver-agentfx=../appdriver-agentfx
+project.appdriver-agentfx-ui=../appdriver-agentfx-ui
+project.appdriver-base=../appdriver-base
+project.appdriver-constant=../appdriver-constant
+project.appdriver-iface=../appdriver-iface
+reference.appdriver-agent.jar=${project.appdriver-agent}/dist/appdriver-agent.jar
+reference.appdriver-agentfx-ui.jar=${project.appdriver-agentfx-ui}/dist/appdriver-agentfx-ui.jar
+reference.appdriver-agentfx.jar=${project.appdriver-agentfx}/dist/appdriver-agentfx.jar
+reference.appdriver-base.jar=${project.appdriver-base}/dist/appdriver-base.jar
+reference.appdriver-constant.jar=${project.appdriver-constant}/dist/appdriver-constant.jar
+reference.appdriver-iface.jar=${project.appdriver-iface}/dist/appdriver-iface.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
