--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -54,12 +54,6 @@ file.reference.xmlbeans-3.0.2.jar=../lib/xmlbeans-3.0.2.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${reference.appdriver-agent.jar}:\
-    ${reference.appdriver-agentfx.jar}:\
-    ${reference.appdriver-agentfx-ui.jar}:\
-    ${reference.appdriver-base.jar}:\
-    ${reference.appdriver-constant.jar}:\
-    ${reference.appdriver-iface.jar}:\
     ${file.reference.commons-codec-1.11.jar}:\
     ${file.reference.commons-compress-1.9.jar}:\
     ${file.reference.commons-dbcp2-2.7.0.jar}:\
@@ -73,6 +67,12 @@ javac.classpath=\
     ${file.reference.hamcrest-core-1.3.jar}:\
     ${file.reference.poi-4.0.1.jar}:\
     ${file.reference.poi-ooxml-4.0.1.jar}:\
+    ${reference.appdriver-agent.jar}:\
+    ${reference.appdriver-agentfx.jar}:\
+    ${reference.appdriver-agentfx-ui.jar}:\
+    ${reference.appdriver-base.jar}:\
+    ${reference.appdriver-constant.jar}:\
+    ${reference.appdriver-iface.jar}:\
     ${file.reference.poi-ooxml-schemas-4.0.1.jar}:\
     ${file.reference.xmlbeans-3.0.2.jar}:\
     ${file.reference.json-simple-1.1.1.jar}:\
@@ -115,12 +115,12 @@ jlink.launcher.name=fund-manager
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
-project.appdriver-agent=../appdriver-agent
-project.appdriver-agentfx=../appdriver-agentfx
-project.appdriver-agentfx-ui=../appdriver-agentfx-ui
-project.appdriver-base=../appdriver-base
-project.appdriver-constant=../appdriver-constant
-project.appdriver-iface=../appdriver-iface
+project.appdriver-agent=../../applicaciones-de-los-pedritos-ant/appdriver-agent
+project.appdriver-agentfx=../../applicaciones-de-los-pedritos-ant/appdriver-agentfx
+project.appdriver-agentfx-ui=../../applicaciones-de-los-pedritos-ant/appdriver-agentfx-ui
+project.appdriver-base=../../applicaciones-de-los-pedritos-ant/appdriver-base
+project.appdriver-constant=../../applicaciones-de-los-pedritos-ant/appdriver-constant
+project.appdriver-iface=../../applicaciones-de-los-pedritos-ant/appdriver-iface
 reference.appdriver-agent.jar=${project.appdriver-agent}/dist/appdriver-agent.jar
 reference.appdriver-agentfx-ui.jar=${project.appdriver-agentfx-ui}/dist/appdriver-agentfx-ui.jar
 reference.appdriver-agentfx.jar=${project.appdriver-agentfx}/dist/appdriver-agentfx.jar
